@@ -33,7 +33,7 @@ public class MarkTreatmentCompletedButton extends MarkCompletedButton
         String pkColName = null;
         if (ti.getPkColumnNames() != null && ti.getPkColumnNames().size() == 1)
         {
-            pkColName = ti.getPkColumnNames().get(0);
+            pkColName = ti.getPkColumnNames().getFirst();
         }
 
         return "NIRC_EHR.window.MarkTreatmentCompletedWindow.buttonHandler(dataRegionName, " + PageFlowUtil.jsString(_schemaName) + ", " + PageFlowUtil.jsString(_queryName) + ", " + PageFlowUtil.jsString(xtype) + ", " + PageFlowUtil.jsString(pkColName) + ");";
